[SELC-5761] feat: changed check-manager api to control if manager is active on selfcare-user (#558)