@@ -293,7 +293,7 @@ class OnboardingServiceDefaultTest {
 
         Uni<OnboardingResponse> response = onboardingService.onboardingIncrement(onboardingRequest, users, List.of(aggregateInstitutionRequest));
 
-        asserter.assertEquals(() -> response,onboardingResponse);
+        asserter.assertEquals(() -> response, onboardingResponse);
     }
 
     private static OnboardingResponse getOnboardingResponse() {
@@ -851,13 +851,14 @@ class OnboardingServiceDefaultTest {
     @Test
     @RunOnVertxContext
     void onboarding_Onboarding_Aggregator(UniAsserter asserter) {
-        UserRequest managerUser= UserRequest.builder()
+        UserRequest managerUser = UserRequest.builder()
                 .name("name")
                 .taxCode(managerResource.getFiscalCode())
                 .role(PartyRole.MANAGER)
                 .build();
 
-        Onboarding request = new Onboarding();request.setIsAggregator(Boolean.TRUE);
+        Onboarding request = new Onboarding();
+        request.setIsAggregator(Boolean.TRUE);
         List<UserRequest> users = List.of(managerUser);
         request.setProductId(PROD_INTEROP.getValue());
         Institution institutionBaseRequest = new Institution();
@@ -879,7 +880,7 @@ class OnboardingServiceDefaultTest {
         mockVerifyOnboardingNotFound();
         mockVerifyAllowedMap(request.getInstitution().getTaxCode(), request.getProductId(), asserter);
 
-        asserter.assertThat(() -> onboardingService.onboarding(request, users,null), Assertions::assertNotNull);
+        asserter.assertThat(() -> onboardingService.onboarding(request, users, null), Assertions::assertNotNull);
 
         asserter.execute(() -> {
             PanacheMock.verify(Onboarding.class).persist(any(Onboarding.class), any());
@@ -1279,10 +1280,10 @@ class OnboardingServiceDefaultTest {
     }
 
     void mockVerifyOnboardingNotFound() {
-            PanacheMock.mock(Onboarding.class);
-            ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
-            when(query.stream()).thenReturn(Multi.createFrom().empty());
-            when(Onboarding.find(any())).thenReturn(query);
+        PanacheMock.mock(Onboarding.class);
+        ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
+        when(query.stream()).thenReturn(Multi.createFrom().empty());
+        when(Onboarding.find(any())).thenReturn(query);
     }
 
     void mockVerifyOnboardingNotEmpty(UniAsserter asserter) {
@@ -1291,7 +1292,8 @@ class OnboardingServiceDefaultTest {
             PanacheMock.mock(Onboarding.class);
             ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
             when(query.stream()).thenReturn(Multi.createFrom().items(createDummyOnboarding()));
-            when(Onboarding.find(any())).thenReturn(query);});
+            when(Onboarding.find(any())).thenReturn(query);
+        });
 
     }
 
@@ -1773,7 +1775,7 @@ class OnboardingServiceDefaultTest {
         when(productService.getProductIsValid(onboarding.getProductId()))
                 .thenReturn(createDummyProduct(onboarding.getProductId(), false));
 
-       mockVerifyOnboardingNotFound();
+        mockVerifyOnboardingNotFound();
 
         when(onboardingValidationStrategy.validate(onboarding.getProductId(), onboarding.getInstitution().getTaxCode()))
                 .thenReturn(true);
@@ -2080,6 +2082,7 @@ class OnboardingServiceDefaultTest {
             asserter.assertFailedWith(() -> onboardingService.complete(onboarding.getId(), TEST_FORM_ITEM),
                     InvalidRequestException.class);
         }
+
         // can't be tested
         //@Test
         @RunOnVertxContext
@@ -2251,51 +2254,76 @@ class OnboardingServiceDefaultTest {
         ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
         when(query.stream()).thenReturn(Multi.createFrom().items(onboarding));
         when(Onboarding.find((Document) any(), any())).thenReturn(query);
+        UserRequest userRequest = new UserRequest();
+        userRequest.setRole(PartyRole.MANAGER);
+        userRequest.setTaxCode("managerTaxCode");
+        request.setUsers(List.of(userRequest));
+
         UserResource userResource = new UserResource();
         userResource.setId(UUID.randomUUID());
-        when(userRegistryApi.searchUsingPOST(any(), any()))
-                .thenReturn(Uni.createFrom().item(userResource));
 
-        UniAssertSubscriber<Boolean> subscriber = onboardingService
-                .checkManager(request)
-                .subscribe()
-                .withSubscriber(UniAssertSubscriber.create());
+        when(userRegistryApi.searchUsingPOST(any(), any())).thenReturn(Uni.createFrom().item(userResource));
+        when(userInstitutionApi.retrieveUserInstitutions(any(), any(), any(), any(), any(), any()))
+                .thenReturn(Uni.createFrom().item(List.of(new UserInstitutionResponse())));
 
-        subscriber.assertCompleted();
-        assertFalse(subscriber.getItem());
+        Uni<CheckManagerResponse> result = onboardingService.checkManager(request);
+        CheckManagerResponse checkResponse = result.await().indefinitely();
+
+        assertNotNull(checkResponse);
     }
 
     @Test
     void testCheckManagerWith404FromUserRegistry() {
         OnboardingUserRequest request = createDummyUserRequest();
+        Onboarding onboarding = createDummyOnboarding();
+        PanacheMock.mock(Onboarding.class);
+        ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
+        when(query.stream()).thenReturn(Multi.createFrom().items(onboarding));
+        when(Onboarding.find((Document) any(), any())).thenReturn(query);
+
         WebApplicationException exception = mock(WebApplicationException.class);
         Response response = mock(Response.class);
         when(response.getStatus()).thenReturn(404);
         when(exception.getResponse()).thenReturn(response);
         when(userRegistryApi.searchUsingPOST(any(), any()))
                 .thenReturn(Uni.createFrom().failure(exception));
-        UniAssertSubscriber<Boolean> subscriber = onboardingService
+
+        UniAssertSubscriber<CheckManagerResponse> subscriber = onboardingService
                 .checkManager(request)
                 .subscribe()
                 .withSubscriber(UniAssertSubscriber.create());
+
         subscriber.assertCompleted();
-        assertFalse(subscriber.getItem());
+        CheckManagerResponse checkResponse = subscriber.getItem();
+        assertNotNull(checkResponse);
+
+        verify(userRegistryApi).searchUsingPOST(any(), any());
     }
 
     @Test
     void testCheckManagerWith500FromUserRegistry() {
         OnboardingUserRequest request = createDummyUserRequest();
+        Onboarding onboarding = createDummyOnboarding();
+        PanacheMock.mock(Onboarding.class);
+        ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
+        when(query.stream()).thenReturn(Multi.createFrom().items(onboarding));
+        when(Onboarding.find((Document) any(), any())).thenReturn(query);
+
         WebApplicationException exception = mock(WebApplicationException.class);
         Response response = mock(Response.class);
         when(response.getStatus()).thenReturn(500);
         when(exception.getResponse()).thenReturn(response);
         when(userRegistryApi.searchUsingPOST(any(), any()))
                 .thenReturn(Uni.createFrom().failure(exception));
-        UniAssertSubscriber<Boolean> subscriber = onboardingService
+
+        UniAssertSubscriber<CheckManagerResponse> subscriber = onboardingService
                 .checkManager(request)
                 .subscribe()
                 .withSubscriber(UniAssertSubscriber.create());
+
         subscriber.assertFailedWith(WebApplicationException.class);
+
+        verify(userRegistryApi).searchUsingPOST(any(), any());
     }
 
     @Test
@@ -2313,26 +2341,34 @@ class OnboardingServiceDefaultTest {
         when(userRegistryApi.searchUsingPOST(any(), any()))
                 .thenReturn(Uni.createFrom().item(userResource));
 
-        UniAssertSubscriber<Boolean> subscriber = onboardingService
+        UserInstitutionResponse userInstitutionResponse = new UserInstitutionResponse();
+        when(userInstitutionApi.retrieveUserInstitutions(any(), any(), any(), any(), any(), any()))
+                .thenReturn(Uni.createFrom().item(List.of(userInstitutionResponse)));
+
+        UniAssertSubscriber<CheckManagerResponse> subscriber = onboardingService
                 .checkManager(request)
                 .subscribe()
                 .withSubscriber(UniAssertSubscriber.create());
 
         subscriber.assertCompleted();
-        assertTrue(subscriber.getItem());
-    }
-
-    private static OnboardingUserRequest createDummyUserRequest() {
-        OnboardingUserRequest request = new OnboardingUserRequest();
-        UserRequest user = new UserRequest();
-        user.setTaxCode("taxCode");
-        user.setRole(PartyRole.MANAGER);
-        request.setUsers(List.of(user));
-        return request;
+        CheckManagerResponse response = subscriber.getItem();
+        assertNotNull(response);
+        verify(userRegistryApi).searchUsingPOST(any(), any());
     }
 
     @Test
-    void testCheckManageResourceNotFound() {
+    void testInvalidRequestExceptionWhenManagerIsNull() {
+        OnboardingUserRequest request = new OnboardingUserRequest();
+        request.setUsers(Collections.emptyList());
+
+        InvalidRequestException exception = assertThrows(InvalidRequestException.class, () -> {
+            onboardingService.checkManager(request);
+        });
+        assertEquals("At least one user should have role MANAGER", exception.getMessage());
+    }
+
+    @Test
+    void testCheckManagerWithEmptyOnboardings() {
         OnboardingUserRequest request = createDummyUserRequest();
         PanacheMock.mock(Onboarding.class);
         ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
@@ -2343,12 +2379,55 @@ class OnboardingServiceDefaultTest {
         when(userRegistryApi.searchUsingPOST(any(), any()))
                 .thenReturn(Uni.createFrom().item(userResource));
 
-        UniAssertSubscriber<Boolean> subscriber = onboardingService
+        UniAssertSubscriber<CheckManagerResponse> subscriber = onboardingService
                 .checkManager(request)
                 .subscribe()
                 .withSubscriber(UniAssertSubscriber.create());
 
-        subscriber.assertFailedWith(ResourceNotFoundException.class);
+        subscriber.assertCompleted();
+        CheckManagerResponse checkResponse = subscriber.getItem();
+        assertNotNull(checkResponse);
+        assertFalse(checkResponse.isResponse());
+    }
+
+    @Test
+    void testCheckManagerWithEmptyUserList() {
+        final UUID uuid = UUID.randomUUID();
+        OnboardingUserRequest request = createDummyUserRequest();
+        Onboarding onboarding = createDummyOnboarding();
+        onboarding.getUsers().get(0).setId(uuid.toString());
+        PanacheMock.mock(Onboarding.class);
+        ReactivePanacheQuery query = Mockito.mock(ReactivePanacheQuery.class);
+        when(query.stream()).thenReturn(Multi.createFrom().items(onboarding));
+        when(Onboarding.find((Document) any(), any())).thenReturn(query);
+        UserResource userResource = new UserResource();
+        userResource.setId(uuid);
+        when(userRegistryApi.searchUsingPOST(any(), any()))
+                .thenReturn(Uni.createFrom().item(userResource));
+
+        when(userInstitutionApi.retrieveUserInstitutions(any(), any(), any(), any(), any(), any()))
+                .thenReturn(Uni.createFrom().item(Collections.emptyList()));
+
+        UniAssertSubscriber<CheckManagerResponse> subscriber = onboardingService
+                .checkManager(request)
+                .subscribe()
+                .withSubscriber(UniAssertSubscriber.create());
+
+        subscriber.assertCompleted();
+        CheckManagerResponse response = subscriber.getItem();
+        assertNotNull(response);
+        assertFalse(response.isResponse());
+        verify(userRegistryApi).searchUsingPOST(any(), any());
+        verify(userInstitutionApi).retrieveUserInstitutions(any(), any(), any(), any(), any(), any());
+    }
+
+    private static OnboardingUserRequest createDummyUserRequest() {
+        OnboardingUserRequest request = new OnboardingUserRequest();
+        UserRequest user = new UserRequest();
+        user.setTaxCode("taxCode");
+        user.setRole(PartyRole.MANAGER);
+        request.setUsers(List.of(user));
+        return request;
     }
 
     @Test
@@ -2388,7 +2467,7 @@ class OnboardingServiceDefaultTest {
         mockSimpleProductValidAssert(newOnboarding.getProductId(), false, asserter);
         mockSimpleSearchPOSTAndPersist(asserter);
 
-        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), managerResource.getId().toString(), asserter);
+        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), true, asserter);
 
         asserter.assertFailedWith(() -> onboardingService.onboardingUserPg(newOnboarding, userRequests), InvalidRequestException.class);
 
@@ -2411,7 +2490,7 @@ class OnboardingServiceDefaultTest {
         mockSimpleProductValidAssert(newOnboarding.getProductId(), false, asserter);
         mockSimpleSearchPOSTAndPersist(asserter);
 
-        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), "old-manager-id", asserter);
+        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), false, asserter);
 
         asserter.execute(() -> when(infocamereApi.institutionsByLegalTaxIdUsingPOST(any()))
                 .thenReturn(Uni.createFrom().item(new BusinessesResource())));
@@ -2436,7 +2515,7 @@ class OnboardingServiceDefaultTest {
         mockSimpleProductValidAssert(newOnboarding.getProductId(), false, asserter);
         mockSimpleSearchPOSTAndPersist(asserter);
 
-        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), "old-manager-id", asserter);
+        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), false, asserter);
 
         LegalVerificationResult legalVerificationResult = new LegalVerificationResult();
         legalVerificationResult.setVerificationResult(false);
@@ -2464,7 +2543,7 @@ class OnboardingServiceDefaultTest {
         mockSimpleProductValidAssert(newOnboarding.getProductId(), false, asserter);
         mockSimpleSearchPOSTAndPersist(asserter);
 
-        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), "old-manager-id", asserter);
+        mockRetrieveUserInstitutions(newOnboarding.getInstitution().getId(), false, asserter);
 
         LegalVerificationResult legalVerificationResult = new LegalVerificationResult();
         legalVerificationResult.setVerificationResult(true);
@@ -2485,14 +2564,13 @@ class OnboardingServiceDefaultTest {
         asserter.assertNotNull(() -> onboardingService.onboardingUserPg(newOnboarding, userRequests));
     }
 
-    private void mockRetrieveUserInstitutions(String institutionId, String userId, UniAsserter asserter) {
+    private void mockRetrieveUserInstitutions(String institutionId, boolean shouldRetrieveUser, UniAsserter asserter) {
         UserInstitutionResponse userInstitutionResponse = new UserInstitutionResponse();
         userInstitutionResponse.setId("test");
         userInstitutionResponse.setInstitutionId(institutionId);
-        userInstitutionResponse.setUserId(userId);
 
         asserter.execute(() -> when(userInstitutionApi.retrieveUserInstitutions(any(), any(), any(), any(), any(), any()))
-                .thenReturn(Uni.createFrom().item(List.of(userInstitutionResponse))));
+                .thenReturn(Uni.createFrom().item(shouldRetrieveUser ? List.of(userInstitutionResponse) : Collections.emptyList())));
     }
 
     private void mockFindOnboarding(UniAsserter asserter, Onboarding onboarding) {
